# RS203

./: .gitignore  Cargo.toml  PUBLISHING.md  README.md
.github/workflows/: ci.yml
crates/fips203-core/: Cargo.toml  LICENSE  README.md
crates/fips203-core/examples/: loopback_std.rs
crates/fips203-core/src/: error.rs  frame.rs  lib.rs  mlkem.rs  msgpack.rs  secrets.rs  session.rs  tunnel.rs  wire.rs
crates/fips203-core/src/fips202/: fips202_keccak_perm.rs  mod.rs
crates/fips203-core/src/mlkem/pqclean768/: cbd.rs  indcpa.rs  kem.rs  mod.rs  ntt.rs  ntt_zetas.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  symmetric.rs  verify.rs
crates/fips203-core/tests/: control_shaped_payload.rs  cross_session_frame.rs  frame_smoke.rs  handshake_duplex.rs  mlkem_roundtrip.rs  msgpack_decode_golden.rs  msgpack_display_fallback.rs  msgpack_pack_golden.rs  msgpack_roundtrip.rs  msgpack_vs_opaque_frame.rs  raw_plaintext_frame.rs  rekey_epoch.rs  session_pack_roundtrip.rs  session_unpack_validate.rs  wire_fuzz_props.rs  wire_roundtrip.rs
crates/fips203-core/tests/support/: mod.rs
crates/fips203-tunnel/: Cargo.toml  README.md
crates/fips203-tunnel/src/: client.rs  config.rs  crypto_tunnel.rs  debug.rs  lib.rs  link.rs  main.rs  runtime.rs  server.rs  shutdown.rs  wire.rs
crates/fips203-tunnel/tests/: handshake_tcp.rs  tunnel_link_loopback.rs
scripts/: interop_rekey.sh  interop_tunnel.sh  rust_tunnel_smoke.sh
