[package]
name = "fips203-core"
description = "Pure-Rust ML-KEM-768 and FIPS203 tunnel protocol (wire-compatible with TheMapleseed/203)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["tests/**"]

[dependencies]

[lib]
name = "fips203_core"
path = "src/lib.rs"

[dev-dependencies]
proptest = "1.6"

[[example]]
name = "loopback_std"
path = "examples/loopback_std.rs"

[package.metadata.docs.rs]
all-features = true
