[package]
name = "fips203-tunnel"
description = "Tokio TCP encrypted tunnel (ML-KEM-768 + FIPS203TUNNEL-GCM) and fips203_tunnel CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
rust-version.workspace = true
authors.workspace = true
keywords = ["cryptography", "post-quantum", "tokio", "tunnel", "ml-kem"]
categories.workspace = true
exclude = ["tests/**"]
documentation = "https://docs.rs/fips203_tunnel"

[lib]
name = "fips203_tunnel"
path = "src/lib.rs"

[[bin]]
name = "fips203_tunnel"
path = "src/bin/main.rs"

[features]
default = []
tunnel-debug = []

[dependencies]
fips203-core = { version = "0.1.0", path = "../fips203-core" }
tokio = { version = "1.37", features = ["net", "io-util", "io-std", "rt-multi-thread", "sync", "signal", "macros", "time"] }

[package.metadata.docs.rs]
all-features = true
features = ["tunnel-debug"]
